[gd_scene load_steps=10 format=2]

[ext_resource path="res://SCENES/player/player.gd" type="Script" id=1]
[ext_resource path="res://SCENES/player/Line2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://SCRIPTS/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/sound/game-teleport-90735.wav" type="AudioStream" id=4]
[ext_resource path="res://ASSETS/sound/ricochet-2-101553.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 39.3192

[sub_resource type="CircleShape2D" id=3]
radius = 31.0644

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.957747, 1 ), 0.478396, 0.0, 0, 0 ]

[node name="player" type="KinematicBody2D"]
z_index = 10
script = ExtResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color( 0.8, 0.8, 0.796078, 1 )
scale = Vector2( 27, 26 )
z_index = 4
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="player-area" type="Area2D" parent="."]
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="player-area"]
shape = SubResource( 3 )

[node name="Line2D" parent="." instance=ExtResource( 2 )]
width = 50.0
width_curve = SubResource( 4 )
default_color = Color( 0.556863, 0.556863, 0.556863, 0.560784 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_right = 720
limit_bottom = 1280
script = ExtResource( 3 )

[node name="shootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="ricochetSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="player-area" to="." method="_on_playerarea_area_entered"]
